[tool.poetry]
name = "pyxy"
version = "0.0.1-alpha.1"
description = "A component based template engine inspired by JSX."
authors = ["Zech Zimmerman <hi@zech.codes>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
